--- a/src/theme/DocCardList/styles.module.css
+++ b/src/theme/DocCardList/styles.module.css
@@ -3,5 +3,6 @@ p2 {
     font-size: 1.2rem;
     margin-left: 15px;
     font-weight: 600;
-    line-height: 4.0;
+    line-height: 1.0;
+    margin-bottom: 30px;
 }
